fixed windows overflow

--- a/src/css/TodoItem.css
+++ b/src/css/TodoItem.css
@@ -21,6 +21,10 @@
   word-wrap: break-word;*/
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 .todo-footer-container{
   display: flex;
   justify-content: space-between;
